--- a/services3.html
+++ b/services3.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=Nevers stationary and IT Solution in Malawi-offering printing, compurter accessories and more-width, initial-scale=1.0" />
   <title>NB Stationary & IT Solutions - Services</title>
+  <meta name="keywords" content="Nevers Stationary and IT Solutions, Malawi, printing, accessories Github pages">
   <style>
     /* Reset styles */
     * {
