--- a/staff.html
+++ b/staff.html
@@ -11,14 +11,12 @@
       padding: 0;
       box-sizing: border-box;
     }
-    /* Body & Background */
     body {
       font-family: Arial, sans-serif;
       background: linear-gradient(135deg, #2c3e50, #3498db);
       color: #333;
       padding: 20px;
     }
-    /* Header Styling */
     header {
       text-align: center;
       margin-bottom: 40px;
@@ -31,7 +29,6 @@
     header p {
       font-size: 1.2rem;
     }
-    /* Main Container */
     main {
       max-width: 1200px;
       margin: 0 auto;
@@ -40,7 +37,6 @@
       border-radius: 8px;
       box-shadow: 0 4px 8px rgba(0,0,0,0.2);
     }
-    /* Staff Grid */
     .staff-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -68,7 +64,6 @@
       font-size: 1rem;
       color: #777;
     }
-    /* Footer Styling */
     footer {
       text-align: center;
       margin-top: 40px;
@@ -97,26 +92,26 @@
       <div class="staff-grid">
         <!-- Staff Card Example -->
         <div class="staff-card">
-          <img src="PICS/NEVERS.jpg" alt="Never Bester" />
+          <img src="staff/NEVERS.jpg" alt="Never Bester" />
           <h2>Never Bester</h2>
           <p>CEO & Founder</p>
         </div>
         <div class="staff-card">
-          <img src="PICS/soche pic.jpg" alt="Emmanuel chagoma" />
+          <img src="staff/soche pic.jpg" alt="Emmanuel chagoma" />
           <h2>ICT Fanz</h2>
           <p>CTO</p>
         </div>
         <div class="staff-card">
-          <img src="PICS/bester.jpg" alt="Never & Emmanuel" />
+          <img src="staff/bester.jpg" alt="Never & Emmanuel" />
           <h2>Never B & E chagoma</h2>
           <p>Lead Designer</p>
         </div>
         <div class="staff-card">
-          <img src="PICS/lainnah.jpg" alt="Lainnah Bester" />
+          <img src="staff/lainnah.jpg" alt="Lainnah Bester" />
           <h2>Lainnah Bester</h2>
           <p>Marketing Manager</p>
         </div>
-        <!-- Add additional staff cards as needed -->
+        <!-- Add more staff here -->
       </div>
     </section>
   </main>
