--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About Us - NB Stationary & IT Solutions</title>
+  <title>About Us - Never's Digital World</title>
   <style>
   <link rel="stylesheet" href="styles.css" />
 </head>
@@ -139,4 +139,5 @@ footer p {
   </main>
   <footer>
     <p>&copy; 2025 My Website. All rights reserved.</p>
+
   </footer>
