--- a/contacts.html
+++ b/contacts.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contact Us - NB Stationary & IT Solutions</title>
+  <title>Contact Us - Never's Digital World</title>
   <style>
     /* Reset and global styles */
     * {
@@ -121,3 +121,4 @@
   </div>
 </body>
 </html>
+
