Change company name to 'Never's Digital World'
Updated company name and keywords in the HTML file.

Signed-off-by: NeversCoder-2025 <besternevers@gmail.com>

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=Nevers stationary and IT Solution in Malawi-offering printing, compurter accessories and more-width, initial-scale=1.0" />
-  <title>NB Stationary & IT Solutions - Services</title>
-  <meta name="keywords" content="Nevers Stationary and IT Solutions, Malawi, printing, accessories Github pages">
+  <meta name="viewport" content="width=Never's Digital World in Malawi-offering printing, compurter accessories and more-width, initial-scale=1.0" />
+  <title>Never's Digital World - Services</title>
+  <meta name="keywords" content="Never's Digital World, Malawi, printing, accessories Github pages">
   <style>
     /* Reset styles */
     * {
@@ -141,7 +141,7 @@
 </head>
 <body>
   <header>
-    <h1>NB Stationary & IT Solutions</h1>
+    <h1>Never's Digital World</h1>
   </header>
   
   <main>
@@ -211,7 +211,8 @@
         <li><a href="https://>www.telegram.com" target="_blank">telegram</a></li>
       </ul>
     </div>
-    <p>&copy; 2025 Never Bester Stationary & IT Solutions. All rights reserved.</p>
+    <p>&copy; 2025 Never's Digital World. All rights reserved.</p>
   </footer>
 </body>
 </html>
+
