Change title and footer branding in staff.html
Updated the title and footer content to reflect the new branding.

Signed-off-by: NeversCoder-2025 <besternevers@gmail.com>

--- a/staff.html
+++ b/staff.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Our Staff - NB Stationary & IT Solutions</title>
+  <title>Our Staff - Never's Digital World</title>
   <style>
     /* Global Reset */
     * {
@@ -85,7 +85,7 @@
 <body>
   <header>
     <h1>Meet Our Team</h1>
-    <p>NB Stationary & IT Solutions</p>
+    <p>Never's Digital World</p>
   </header>
   <main>
     <section class="staff">
@@ -116,7 +116,8 @@
     </section>
   </main>
   <footer>
-    <p>&copy; 2025 Never Bester Stationary & IT Solutions. All rights reserved.</p>
+    <p>&copy; 2025 Never's Digital World. All rights reserved.</p>
   </footer>
 </body>
 </html>
+
