Update HTML structure and add Open Graph meta tags
Signed-off-by: NeversCoder-2025 <besternevers@gmail.com>

--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta property="og:title" content="Never’s Digital World">
+<meta property="og:description" content="Digital & IT Solutions">
+<meta property="og:type" content="website">
+  
+ <meta charset="UTF-8" />
   <meta name="viewport" content="width=Never's Digital World in Malawi-offering printing, compurter accessories and more-width, initial-scale=1.0" />
   <title>Never's Digital World - Services</title>
   <meta name="keywords" content="Never's Digital World, Malawi, printing, accessories Github pages">
@@ -215,4 +219,5 @@
   </footer>
 </body>
 </html>
+
 
