Fix HTML structure and update footer links
Signed-off-by: Never's digital world <besternevers@gmail.com>

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     
     <!-- Subscribe Section -->
     <div class="subscribe">
-      <a href="https://www.youtube.com" target="_blank">Subscribe to our YouTube Channel</a>
+      <a href="https://www.youtube.com/@neversbester" target="_blank">Subscribe to our YouTube Channel</a>
     </div>
   </main>
   
@@ -208,16 +208,18 @@
     <div class="footer-section">
       <h4>Our Socials</h4>
       <ul>
-        <li><a href="https://www.facebook.com" target="_blank">Facebook</a></li>
-        <li><a href="https://www.instagram.com" target="_blank">Instagram</a></li>
-        <li><a href="https://www.xcorp.com" target="_blank">X Corp</a></li>
-        <li><a href="https://www.whatsapp.com" target="_blank">WhatsApp</a></li>
-        <li><a href="https://>www.telegram.com" target="_blank">telegram</a></li>
+        <li></li><a href="https://wa.me/26882251051" target="_blank">WhatsApp</a></li>
+        <li></li><a href="https://www.facebook.com/neverson.bester">Facebook</a></li>
+        <li><a href="https://www.youtube.com/@neversBester" target="_blank">youtube</a></li>
+        <li><a href="mailto:besternevers@gmail.com">Email</a></li>
+        <li><p><a href="https://wa.me/26222070995" target="_blank">WhatsApp</a></p></li>
+        <li><a href="https://t.me/neverbester" target="_blank">Telegram</a></li>
       </ul>
     </div>
     <p>&copy; 2025 Never's Digital World. All rights reserved.</p>
   </footer>
 </body>
 </html>
+
 
 
