Fix HTML formatting and improve structure
Signed-off-by: Never's digital world <besternevers@gmail.com>

--- a/index.html
+++ b/index.html
@@ -208,11 +208,10 @@
     <div class="footer-section">
       <h4>Our Socials</h4>
       <ul>
-        <li></li><a href="https://wa.me/26882251051" target="_blank">WhatsApp</a></li>
+        <li></li><a href="https://wa.me/265882251051" target="_blank">WhatsApp</a></li>
         <li></li><a href="https://www.facebook.com/neverson.bester">Facebook</a></li>
         <li><a href="https://www.youtube.com/@neversBester" target="_blank">youtube</a></li>
-        <li><a href="mailto:besternevers@gmail.com">Email</a></li>
-        <li><p><a href="https://wa.me/26222070995" target="_blank">WhatsApp</a></p></li>
+        <li><a href="mailto:besternevers@gmail.com">Email Us</a></li>
         <li><a href="https://t.me/neverbester" target="_blank">Telegram</a></li>
       </ul>
     </div>
@@ -220,6 +219,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
