Fix staff images and update HTML structure
Updated staff images and corrected file paths.

Signed-off-by: Never's digital world <besternevers@gmail.com>

--- a/staff.html
+++ b/staff.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Our Staff - Never's Digital World</title>
   <style>
-    /* Global Reset */
     * {
       margin: 0;
       padding: 0;
@@ -87,37 +86,42 @@
     <h1>Meet Our Team</h1>
     <p>Never's Digital World</p>
   </header>
+
   <main>
     <section class="staff">
       <div class="staff-grid">
-        <!-- Staff Card Example -->
+
         <div class="staff-card">
-          <img src="staff/NEVERS.jpg" alt="Never Bester" />
+          <img src="images/NEVERS.jpg" alt="Never Bester">
           <h2>Never Bester</h2>
           <p>CEO & Founder</p>
         </div>
+
         <div class="staff-card">
-          <img src="staff/soche pic.jpg" alt="Emmanuel chagoma" />
+          <img src="images/soche-pic.jpg" alt="Emmanuel Chagoma">
           <h2>ICT Fanz</h2>
           <p>CTO</p>
         </div>
+
         <div class="staff-card">
-          <img src="staff/bester.jpg" alt="Never & Emmanuel" />
-          <h2>Never B & E chagoma</h2>
+          <img src="images/bester.jpg" alt="Never & Emmanuel">
+          <h2>Never B & E Chagoma</h2>
           <p>Lead Designer</p>
         </div>
+
         <div class="staff-card">
-          <img src="staff/lainnah.jpg" alt="Lainnah Bester" />
+          <img src="images/lainnah.jpg" alt="Lainnah Bester">
           <h2>Lainnah Bester</h2>
           <p>Marketing Manager</p>
         </div>
-        <!-- Add more staff here -->
+
       </div>
     </section>
   </main>
+
   <footer>
     <p>&copy; 2025 Never's Digital World. All rights reserved.</p>
   </footer>
+
 </body>
 </html>
-
