--- a/about.html
+++ b/about.html
@@ -1,143 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Us - Never's Digital World</title>
+
   <style>
-  <link rel="stylesheet" href="styles.css" />
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: Arial, sans-serif;
+      background: linear-gradient(135deg, #2c3e50, #3498db);
+      color: #333;
+      padding: 20px;
+    }
+
+    header {
+      text-align: center;
+      margin-bottom: 40px;
+      color: #fff;
+    }
+
+    header h1 {
+      font-size: 2.5rem;
+      margin-bottom: 10px;
+    }
+
+    main {
+      max-width: 1100px;
+      margin: auto;
+      background: rgba(255, 255, 255, 0.95);
+      padding: 40px;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+    }
+
+    section {
+      margin-bottom: 40px;
+    }
+
+    section h2 {
+      margin-bottom: 15px;
+      color: #2c3e50;
+    }
+
+    section p {
+      margin-bottom: 15px;
+      line-height: 1.6;
+    }
+
+    .team {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 25px;
+      margin-top: 20px;
+    }
+
+    .team-member {
+      background: #fff;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 3px 8px rgba(0,0,0,0.1);
+      text-align: center;
+    }
+
+    .team-member img {
+      width: 150px;
+      height: 150px;
+      border-radius: 50%;
+      object-fit: cover;
+      margin-bottom: 15px;
+    }
+
+    footer {
+      text-align: center;
+      margin-top: 40px;
+      color: #fff;
+    }
+
+    @media (max-width: 600px) {
+      header h1 {
+        font-size: 2rem;
+      }
+    }
+  </style>
 </head>
-/* Global Reset */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-/* Body & Background */
-body {
-  font-family: Arial, sans-serif;
-  background: linear-gradient(135deg, #2c3e50, #3498db);
-  color: #333;
-  padding: 20px;
-}
-/* Header Styling */
-header {
-  text-align: center;
-  margin-bottom: 40px;
-  color: #fff;
-}
-header h1 {
-  font-size: 2.5rem;
-  margin-bottom: 10px;
-}
-header p {
-  font-size: 1.2rem;
-}
-/* Main Container */
-main {
-  max-width: 1200px;
-  margin: 0 auto;
-  background: rgba(255, 255, 255, 0.9);
-  padding: 40px;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-}
-/* Staff Grid */
-.staff-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 20px;
-}
-.staff-card {
-  background: #fff;
-  padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-  text-align: center;
-}
-.staff-card img {
-  width: 150px;
-  height: 150px;
-  border-radius: 50%;
-  object-fit: cover;
-  margin-bottom: 15px;
-}
-.staff-card h2 {
-  font-size: 1.5rem;
-  margin-bottom: 5px;
-}
-.staff-card p {
-  font-size: 1rem;
-  color: #777;
-}
-/* Footer Styling */
-footer {
-  text-align: center;
-  margin-top: 40px;
-  color: #fff;
-}
-footer p {
-  margin: 10px 0;
-}
-@media (max-width: 600px) {
-  header h1 {
-    font-size: 2rem;
-  }
-  header p {
-    font-size: 1rem;
-  }
-}
-</style>
-</head>
+
 <body>
+
   <header>
     <h1>About Us</h1>
+    <p>Never's Digital World</p>
   </header>
+
   <main>
-    <section class="about-intro">
+
+    <section>
       <h2>Welcome to Our Website</h2>
       <p>
-        We are passionate about delivering the best services to our customers.
-        Learn more about our mission and team below.
+        We are passionate about delivering the best digital solutions,
+        web development services, and ICT innovations to our clients.
       </p>
     </section>
-    <section class="our-mission">
+
+    <section>
       <h2>Our Mission</h2>
       <p>
-        Our mission is to provide high-quality products and exceptional service,
-        ensuring our customers' success and satisfaction.
+        Our mission is to provide high-quality digital services,
+        ensuring customer satisfaction and business growth.
       </p>
     </section>
-    <section class="our-team">
-      <h2>MEET OUR TEAM</h2>
-      <h3>chief-executive-officer</h3>
-      <div class="team">
-        <article class="team-member">
-          <img src="PICS/NEVERS.jpg" alt="chief-executive-officer" height="150px" width="150px" />
-          <b><i><P>Never Bester</P></i></b>
-          <h3>TEAM MEMBERS</h3>
-        </article>
-        <article class="team-member">
-          <img src="PICS/soche pic.jpg" alt="Team member" height="150px" width="150px" />
-          <p>Emmanuel Chagoma</p>
-          <p>Grem Aaron</p>
-           <P>Victory kachipire</P>
-          <p>Zephania</p>
-          <p>Smao Zebron</p>
-          <p>Chikondi Somanje</p>
-          <p>Angela Mwale
-            <p>Wanangwa Mugala</p>
-          </p>
-          <h3>marketing officer</h3>
-        </article>
-        <article class="marketing-officer">
-          <img src="PICS/lainnah.jpg" alt="marketing-officer" height="150px" width="150px"/>
-          <b><i><p>Lainnah Bester</p></i></b>
-        </article>
-      </div>
-    </section>
-  </main>
-  <footer>
-    <p>&copy; 2025 My Website. All rights reserved.</p>
 
+    <section>
+      <h2>Meet Our Leadership Team</h2>
+
+      <div class="team">
+
+        <div class="team-member">
+          <img src="images/NEVERS.jpg" alt="Never Bester">
+          <h3>Never Bester</h3>
+          <p>Chief Executive Officer (CEO)</p>
+        </div>
+
+        <div class="team-member">
+          <img src="images/sochepic.jpg" alt="Emmanuel Chagoma">
+          <h3>Emmanuel Chagoma</h3>
+          <p>Chief Technology Officer (CTO)</p>
+        </div>
+
+        <div class="team-member">
+          <img src="images/lainnah.jpg" alt="Lainnah Bester">
+          <h3>Lainnah Bester</h3>
+          <p>Marketing Officer</p>
+        </div>
+
+      </div>
+
+    </section>
+
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Never's Digital World. All rights reserved.</p>
   </footer>
+
+</body>
+</html>
